--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 </head>
 <body>
 </div>
-<!--img src="./img/logo2.png" class="logo" alt=""-->
 <h1 class="display-4"  >POKEDEX</h1>
 <div class="contenedor">
     <input type="text" id="caja" placeholder="Ingrese Un Numero">
@@ -58,30 +57,6 @@
     <img src="" id="img" class="pokemon" alt="">
     <p id="info" class="text-white"></p>
 </div>
-
-    <script>
-        let buton = document.getElementById('button')
-
-        buton.addEventListener('click',() => {
-            let caja = document.getElementById('caja').value
-            let img = document.getElementById('img')
-            let p = document.getElementById('info')
-            let xhttp = new XMLHttpRequest()
-            xhttp.open("GET",`https://pokeapi.co/api/v2/pokemon/${caja}`)
-            xhttp.send()
-
-            xhttp.onreadystatechange = function () {
-                if(this.readyState == 4 && this.status == 200)
-                {
-                let datoPokemon = JSON.parse( this.responseText)
-                console.log(datoPokemon)
-                img.setAttribute("src",datoPokemon.sprites.front_default)
-                p.textContent = datoPokemon.name
-                }
-            }
-
-        })
-    </script>
-
 </body>
+<script src="./js/callApi.js"></script>
 </html>
