--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Pokedex</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <style>
-         body{
-           background-color: #333;
+        body{
+           background-color:black;
            overflow: hidden;
        }
        .logo{
@@ -41,22 +41,31 @@
            display: inline-block;
        }
        p{
-           margin-top: -60px;
+           margin-top: -120px;
        }
        .display-4{
            text-align: center;
+           font-family: Arial, Helvetica, sans-serif;
+           color: aliceblue;
+       }
+       header{
+        background-color: red;
        }
     </style>
 </head>
 <body>
+    <header>
+        <h1 class="display-4">POKEDEX</h1>
+    </header>
 </div>
-<h1 class="display-4"  >POKEDEX</h1>
+
 <div class="contenedor">
+    <img src="" id="img" class="pokemon" alt="">
     <input type="text" id="caja" placeholder="Ingrese Un Numero">
     <button class="text-white btn bg-danger" id="button">Buscar</button>
-    <img src="" id="img" class="pokemon" alt="">
     <p id="info" class="text-white"></p>
 </div>
 </body>
+<!-- Llamada por AJAX con Script separado -->
 <script src="./js/callApi.js"></script>
 </html>
