Module funciones y pokemones aleatorios

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
            margin-bottom: -30px;
        }
        .pokemon{
-           width: 150px;
-           height: 150px;
+           width: 350px;
+           height: 350px;
            margin: 40px auto;
            display: inline-block;
        }
        p{
            margin-top: -120px;
+           font-size: xx-large;
+           font-family: Arial, Helvetica, sans-serif;
        }
        .display-4{
            text-align: center;
@@ -56,12 +58,13 @@
 <body>
     <header>
         <h1 class="display-4">POKEDEX</h1>
+        
     </header>
 </div>
 
 <div class="contenedor">
     <img src="" id="img" class="pokemon" alt="">
-    <input type="text" id="caja" placeholder="Ingrese Un Numero">
+    <input type="text" id="caja" placeholder="Número de pokemon">
     <button class="text-white btn bg-danger" id="button">Buscar</button>
     <p id="info" class="text-white"></p>
 </div>
